# Rshell

./: CMakeLists.txt  README.md  names.txt
header/: rshellbase.hpp
integration_tests/: commented_command_tests  commented_command_tests.sh  exit_command_tests  exit_command_tests.sh  input_redirection_tests  input_redirection_tests.sh  multiple_commands  multiple_commands_tests.sh  names.txt  output_redirection_tests  output_redirection_tests.sh  pipe_operator_tests  pipe_operator_tests.sh  precedence_tests  precedence_tests.sh  single_command  single_command_tests.sh  test_literal_tests  test_literal_tests.sh  test_symbolic_tests  test_symbolic_tests.sh
prototype/: prototype.cpp
src/: command.cpp  connector.cpp  exeargu.cpp  main.cpp  rshellbase.cpp  rshellbase.hpp
unit_tests/: unit_test.cpp
